kubernetes/node_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-finder-service
  #annotations:
  #cloud.google.com/app-protocols: '{"my-https-port":"HTTPS","my-http-port":"HTTP"}'
spec:
  type: NodePort
  selector:
    app: restaurant-finder
  ports:
    #- name: my-https-port
    #  port: 443
    #  targetPort: 5000
    - name: my-http-port
      port: 60000
      targetPort: 5000
