kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-finder-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - secretName: restaurant-finder-secret
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: restaurant-finder-service
                port:
                  number: 60000
